fixing "Set As Desktop Background" in cairo builds on Windows. bug 328354. r=vlad, sspitzer.